[runner] Updated to lifecycle hook model.

--- a/thot_core/classes/thot_interface.ipynb
+++ b/thot_core/classes/thot_interface.ipynb
@@ -105,7 +105,17 @@
     "        \n",
     "        :param asset: Asset to create.\n",
     "        \"\"\"\n",
-    "        pass"
+    "        pass\n",
+    "    \n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def dev_mode():\n",
+    "        \"\"\"\n",
+    "        Whether the script is being run in development mode or not.\n",
+    "        \n",
+    "        :returns: False if being run from the runner, True otherwise.\n",
+    "        \"\"\"\n",
+    "        return False"
    ]
   }
  ],
