--- a/thot_core/runner.ipynb
+++ b/thot_core/runner.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Runner"
+    "# Runner Core"
    ]
   },
   {
@@ -28,137 +28,215 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_script( script_id, script_path, container_id ):\n",
+    "class Runner:\n",
     "    \"\"\"\n",
-    "    Runs the given program form the given Container.\n",
+    "    For performing analysis on a Thot project.\n",
     "    \n",
-    "    :param script_id: Id of the script.\n",
-    "    :param script_path: Path to the script.\n",
-    "    :param container: Id of the container to run from.\n",
-    "    :returns: Script output. Used for collecting added assets.\n",
-    "    \"\"\"\n",
-    "    # setup environment\n",
-    "    env = os.environ.copy()\n",
-    "    env[ 'THOT_CONTAINER_ID' ] = container_id # set root container to be used by thot library\n",
-    "    env[ 'THOT_SCRIPT_ID' ]    = script_id    # used in project for adding Assets\n",
-    "    \n",
-    "    # TODO [0]: Ensure safely run\n",
-    "    # run program\n",
-    "    try:\n",
-    "        return subprocess.check_output(\n",
-    "            'python {}'.format( script_path ),\n",
-    "            shell = True,\n",
-    "            env = env\n",
-    "        )\n",
-    "        \n",
-    "    except subprocess.CalledProcessError as err:\n",
-    "        err.cmd = '[{}] '.format( container_id ) + err.cmd\n",
-    "        raise err\n",
-    "    \n",
-    "    \n",
-    "# TODO [2]: Allow running between certain depths.\n",
-    "def eval_tree( \n",
-    "    root, \n",
-    "    db, \n",
-    "    script_info,\n",
-    "    scripts = None,\n",
-    "    ignore_errors = False, \n",
-    "    multithread = False, \n",
-    "    verbose = False,\n",
-    "    driver = None\n",
-    "):\n",
-    "    \"\"\"\n",
-    "    Runs scripts on the Container tree.\n",
-    "    Uses DFS, running from bottom up.\n",
-    "    \n",
-    "    :param root: Container.\n",
-    "    :param db: Database.\n",
-    "    :param script_info: Function accepting <script id> as a parameter \n",
-    "        and returning a tuple ( <script_id>, <script_path> ).\n",
-    "    :param scripts: List of scripts to run, or None for all. [Default: None]\n",
-    "    :param ignore_errors: Continue running if an error is encountered. [Default: False]\n",
-    "    :param multithread: Evaluate tree using multiple threads. [Default: False]\n",
-    "        CAUTION: May decrease runtime, but also locks system and can not kill.\n",
-    "    :param verbose: Print evaluation information. [Default: False]\n",
-    "    :param driver: Driver used to modify script retrieval. [Default: None]\n",
-    "    \"\"\"\n",
-    "    if isinstance( root, str ):\n",
-    "        root = db.containers.find_one( { '_id': root } )\n",
-    "    \n",
-    "    if not isinstance( root, Container ):\n",
-    "        root = Container( **root )\n",
+    "    Hooks are:\n",
+    "        + get_container: Method to retrieve the Container being run. \n",
+    "            Provided the root id, should return the Container.\n",
+    "            [Siganture: ( root ) => ( Container )]\n",
+    "            [Required]\n",
     "            \n",
-    "    # eval children\n",
-    "    if multithread:\n",
-    "        with ThreadPoolExecutor( max_workers = 10 ) as executer:\n",
-    "            executer.map( \n",
-    "                lambda child: eval_tree( child, db, verbose = verbose ), \n",
-    "                root.children \n",
-    "            )\n",
+    "        + get_script_info: Method to retrieve require information about the Script being run.\n",
+    "            [Signature: ( ScriptAssociation.script ) => ( script id, script path ) ]\n",
+    "            [Required]\n",
     "        \n",
-    "    else:\n",
-    "        for child in root.children:\n",
-    "            # recurse\n",
-    "            eval_tree( \n",
-    "                child, \n",
-    "                db, \n",
-    "                script_info,\n",
-    "                scripts       = scripts,\n",
-    "                ignore_errors = ignore_errors,\n",
-    "                multithread   = multithread,\n",
-    "                verbose       = verbose,\n",
-    "                driver        = driver\n",
-    "            )\n",
+    "        + script_error: Runs when a Script creates an error.\n",
+    "            [Signature: ( error, ignore_errors ) => ()]\n",
+    "            \n",
+    "        + assets_added: Run after a Script analysis is complete, passed ids of the added Assets.\n",
+    "            [Signature: ( added_assets ) => ()]\n",
+    "            \n",
+    "        + complete: Run after a subtree completes.\n",
+    "            [Signature: () => ()]\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    def __init__( self ):\n",
+    "        \"\"\"\n",
+    "        Initializes a new Runner.\n",
+    "        \"\"\"\n",
+    "        self.hooks = {\n",
+    "            'get_container':   None,\n",
+    "            'get_script_info': None,\n",
+    "            'script_error':    self._default_script_error_handler,\n",
+    "            'assets_added':    None,\n",
+    "            'complete':        None\n",
+    "        }\n",
+    "    \n",
+    "    \n",
+    "    def register( self, hook, method ):\n",
+    "        \"\"\"\n",
+    "        Registers a hook method.\n",
+    "        \n",
+    "        :param hook: Name of the hook to register.\n",
+    "        :param method: Method to run.\n",
+    "        \"\"\"\n",
+    "        if hook not in self.hooks:\n",
+    "            # hook is invalid,\n",
+    "            # all hook names are defined in constructor\n",
+    "            raise ValueError( 'Invalid hook name.' )\n",
+    "        \n",
+    "        self.hooks[ hook ] = method\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    def run_script( self, script_id, script_path, container_id ):\n",
+    "        \"\"\"\n",
+    "        Runs the given program form the given Container.\n",
     "\n",
-    "    # TODO [1]: Check filtering works for local projects.\n",
-    "    # filter scripts to run\n",
-    "    root.scripts.sort()\n",
-    "    run_scripts = (\n",
-    "        root.scripts\n",
-    "        if scripts is None else\n",
-    "        filter( lambda assoc: assoc.script in scripts, root.scripts ) # filter scripts\n",
-    "    )\n",
-    "    \n",
-    "    # eval self\n",
-    "    added_assets = []\n",
-    "    for association in run_scripts:\n",
-    "        if not association.autorun:\n",
-    "            continue\n",
-    "        \n",
-    "        \n",
-    "        ( script_id, script_path ) = script_info( association.script )\n",
-    "        \n",
-    "        if verbose:\n",
-    "            print( 'Running script {} on container {}'.format( script_id, root._id )  )\n",
-    "            \n",
+    "        :param script_id: Id of the script.\n",
+    "        :param script_path: Path to the script.\n",
+    "        :param container: Id of the container to run from.\n",
+    "        :returns: Script output. Used for collecting added assets.\n",
+    "        \"\"\"\n",
+    "        # setup environment\n",
+    "        env = os.environ.copy()\n",
+    "        env[ 'THOT_CONTAINER_ID' ] = container_id # set root container to be used by thot library\n",
+    "        env[ 'THOT_SCRIPT_ID' ]    = script_id    # used in project for adding Assets\n",
+    "\n",
+    "        # TODO [0]: Ensure safely run\n",
+    "        # run program\n",
     "        try:\n",
-    "            script_assets = run_script( \n",
-    "                str( script_id ), # convert ids from ObjectId, if necessary\n",
-    "                script_path, \n",
-    "                str( root._id ) \n",
-    "            ) \n",
-    "            \n",
-    "        except Exception as err:\n",
-    "            if ignore_errors:\n",
-    "                # TODO [2]: Only return errors after final exit.\n",
-    "                # collect errors for output at end\n",
-    "                print( '[{}] {}'.format( root._id, err ) )\n",
-    "                \n",
-    "            else:\n",
-    "                raise err\n",
-    "                \n",
-    "        if driver:\n",
-    "            script_assets = [ \n",
-    "                json.loads( asset ) for asset\n",
-    "                in script_assets.decode().split( '\\n' )\n",
-    "                if asset\n",
-    "            ]\n",
-    "            \n",
-    "            driver.added_assets += script_assets\n",
-    "            \n",
+    "            return subprocess.check_output(\n",
+    "                'python {}'.format( script_path ),\n",
+    "                shell = True,\n",
+    "                env = env\n",
+    "            )\n",
+    "        \n",
+    "        except subprocess.CalledProcessError as err:\n",
+    "            err.cmd = '[{}] '.format( container_id ) + err.cmd\n",
+    "            raise err\n",
+    "    \n",
+    "    \n",
+    "    # TODO [2]: Allow running between certain depths.\n",
+    "    def eval_tree( \n",
+    "        self,\n",
+    "        root, \n",
+    "        scripts = None,\n",
+    "        ignore_errors = False, \n",
+    "        multithread = False, \n",
+    "        verbose = False,\n",
+    "    ):\n",
+    "        \"\"\"\n",
+    "        Runs scripts on the Container tree.\n",
+    "        Uses DFS, running from bottom up.\n",
     "\n",
-    "    if driver:\n",
-    "        driver.flush_added_assets()"
+    "        :param root: Container.\n",
+    "        :param scripts: List of scripts to run, or None for all. [Default: None]\n",
+    "        :param ignore_errors: Continue running if an error is encountered. [Default: False]\n",
+    "        :param multithread: Evaluate tree using multiple threads. \n",
+    "            True to use default number of threads, or an integer \n",
+    "            to specify how many threads to use. \n",
+    "            If interpreted as boolean is False, will use a single thread.\n",
+    "            CAUTION: May decrease runtime, but also locks system and can not kill.\n",
+    "            [Default: False] [Default Threads: 5]\n",
+    "        :param verbose: Print evaluation information. [Default: False]\n",
+    "        \"\"\"\n",
+    "        self._check_hooks()\n",
+    "        \n",
+    "        root = self.hooks[ 'get_container' ]( root )\n",
+    "        if not isinstance( root, Container ):\n",
+    "            root = Container( **root )\n",
+    "\n",
+    "        # eval children\n",
+    "        kwargs = {\n",
+    "            'scripts': scripts,\n",
+    "            'ignore_errors': ignore_errors,\n",
+    "            'multithread': multithread,\n",
+    "            'verbose': verbose\n",
+    "        }\n",
+    "        \n",
+    "        if multithread:\n",
+    "            max_workers = (\n",
+    "                5 # default\n",
+    "                if multithread is True else\n",
+    "                multithread\n",
+    "            )\n",
+    "            \n",
+    "            with ThreadPoolExecutor( max_workers = max_workers ) as executer:\n",
+    "                # only enable threading at top level\n",
+    "                kwargs[ 'multithread' ] = False\n",
+    "                \n",
+    "                executer.map( \n",
+    "                    lambda child: self.eval_tree( child, **kwargs ), \n",
+    "                    root.children \n",
+    "                )\n",
+    "\n",
+    "        else:\n",
+    "            for child in root.children:\n",
+    "                # recurse\n",
+    "                self.eval_tree( child, **kwargs )\n",
+    "\n",
+    "        # TODO [1]: Check filtering works for local projects.\n",
+    "        # filter scripts to run\n",
+    "        root.scripts.sort()\n",
+    "        run_scripts = (\n",
+    "            root.scripts\n",
+    "            if scripts is None else\n",
+    "            filter( lambda assoc: assoc.script in scripts, root.scripts ) # filter scripts\n",
+    "        )\n",
+    "\n",
+    "        # eval self\n",
+    "        added_assets = []\n",
+    "        for association in run_scripts:\n",
+    "            if not association.autorun:\n",
+    "                continue\n",
+    "\n",
+    "            ( script_id, script_path ) = self.hooks[ 'get_script_info' ]( association.script )\n",
+    "\n",
+    "            if verbose:\n",
+    "                print( 'Running script {} on container {}'.format( script_id, root._id )  )\n",
+    "\n",
+    "            try:\n",
+    "                script_assets = self.run_script( \n",
+    "                    str( script_id ), # convert ids if necessary\n",
+    "                    script_path, \n",
+    "                    str( root._id ) \n",
+    "                ) \n",
+    "\n",
+    "            except Exception as err:\n",
+    "                self.hooks[ 'script_error' ]( err, ignore_errors )\n",
+    "\n",
+    "            if self.hooks[ 'assets_added' ]:\n",
+    "                script_assets = [ \n",
+    "                    json.loads( asset ) for asset\n",
+    "                    in script_assets.decode().split( '\\n' )\n",
+    "                    if asset\n",
+    "                ]\n",
+    "\n",
+    "                self.hooks[ 'assets_added' ]( script_assets )\n",
+    "\n",
+    "\n",
+    "        if self.hooks[ 'complete' ]:\n",
+    "            self.hooks[ 'complete' ]()\n",
+    "            \n",
+    "            \n",
+    "    def _check_hooks( self ):\n",
+    "        \"\"\"\n",
+    "        Verifies registered hooks.\n",
+    "        \n",
+    "        :throws: Error if registered hook is invalid.\n",
+    "        \"\"\"\n",
+    "        if not self.hooks[ 'get_container' ]:\n",
+    "            raise Error( 'Required hook get_container is not set.' )\n",
+    "        \n",
+    "        if not self.hooks[ 'get_script_info' ]:\n",
+    "            raise Error( 'Required hook get_script_info is not set.' )\n",
+    "    \n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def _default_script_error_handler( err, ignore_errors = False ):\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        if ignore_errors:\n",
+    "            # TODO [2]: Only return errors after final exit.\n",
+    "            # collect errors for output at end\n",
+    "            print( '[{}] {}'.format( root._id, err ) )\n",
+    "\n",
+    "        else:\n",
+    "            raise err"
    ]
   },
   {
