[runner] Escape script paths for spaces and special characters. [classes/base_object] Changed 'is' to '==' comparisons.

--- a/thot_core/classes/base_object.ipynb
+++ b/thot_core/classes/base_object.ipynb
@@ -41,7 +41,7 @@
     "        for prop in self._properties:\n",
     "            val = properties[ prop ]\n",
     "            \n",
-    "            if ( prop is 'metadata' ) and isinstance( val, list ):\n",
+    "            if ( prop == 'metadata' ) and isinstance( val, list ):\n",
     "                md = {}\n",
     "                \n",
     "                # convert metadata list to dictionary\n",
@@ -49,7 +49,7 @@
     "                    md_val = datum[ 'value' ]\n",
     "                    \n",
     "                    # cast value to correct type, comes as string\n",
-    "                    if datum[ 'type' ] is 'number':\n",
+    "                    if datum[ 'type' ] == 'number':\n",
     "                        try:\n",
     "                            # check if int\n",
     "                            md_val = int( md_val )\n",
@@ -58,7 +58,7 @@
     "                            # try as float\n",
     "                            md_val = float( md_val )\n",
     "                        \n",
-    "                    elif datum[ 'type' ] is 'json':\n",
+    "                    elif datum[ 'type' ] == 'json':\n",
     "                        md_val = json.loads( md_val )\n",
     "        \n",
     "                    md[ datum[ 'name' ] ] = md_val\n",
@@ -77,7 +77,7 @@
     "    \n",
     "    \n",
     "    def __getitem__( self, item ):\n",
-    "        if item is '_properties':\n",
+    "        if item == '_properties':\n",
     "            raise KeyError( item )\n",
     "        \n",
     "        return getattr( self, item )\n",
