--- a/thot_core/runner.ipynb
+++ b/thot_core/runner.ipynb
@@ -16,10 +16,29 @@
     "import os\n",
     "import sys\n",
     "import json\n",
+    "import signal\n",
+    "import platform\n",
     "import subprocess\n",
     "from concurrent.futures import ThreadPoolExecutor\n",
     "\n",
     "from .classes.container import Container"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def escape_path( path ):\n",
+    "    return f'\"{ path }\"'\n",
+    "#     system = platform.system()\n",
+    "    \n",
+    "#     if system == 'Windows':\n",
+    "#         return f'\"{ path }\"'\n",
+    "    \n",
+    "#     else:\n",
+    "#         return path.replace( ' ', '\\ ' )"
    ]
   },
   {
@@ -97,9 +116,10 @@
     "\n",
     "        # TODO [0]: Ensure safely run\n",
     "        # run program\n",
+    "        script_path = escape_path( script_path )\n",
     "        try:\n",
     "            return subprocess.check_output(\n",
-    "                'python {}'.format( script_path ),\n",
+    "                f'python { script_path }',\n",
     "                shell = True,\n",
     "                env = env\n",
     "            )\n",
@@ -116,6 +136,7 @@
     "        scripts = None,\n",
     "        ignore_errors = False, \n",
     "        multithread = False, \n",
+    "        multiprocess = False,\n",
     "        verbose = False,\n",
     "    ):\n",
     "        \"\"\"\n",
@@ -129,8 +150,13 @@
     "            True to use default number of threads, or an integer \n",
     "            to specify how many threads to use. \n",
     "            If interpreted as boolean is False, will use a single thread.\n",
+    "            Should be used for IO bound evaluations.\n",
     "            CAUTION: May decrease runtime, but also locks system and can not kill.\n",
     "            [Default: False] [Default Threads: 5]\n",
+    "        :param multiprocess: Evaluate tree using multiple processes.\n",
+    "            Should be used for CPU bound evaluations.\n",
+    "            NOT YET IMPLEMENTED\n",
+    "            [Default: False]\n",
     "        :param verbose: Print evaluation information. [Default: False]\n",
     "        \"\"\"\n",
     "        self._check_hooks()\n",
@@ -219,10 +245,10 @@
     "        :throws: Error if registered hook is invalid.\n",
     "        \"\"\"\n",
     "        if not self.hooks[ 'get_container' ]:\n",
-    "            raise Error( 'Required hook get_container is not set.' )\n",
+    "            raise RuntimeError( 'Required hook get_container is not set.' )\n",
     "        \n",
     "        if not self.hooks[ 'get_script_info' ]:\n",
-    "            raise Error( 'Required hook get_script_info is not set.' )\n",
+    "            raise RuntimeError( 'Required hook get_script_info is not set.' )\n",
     "    \n",
     "    \n",
     "    @staticmethod\n",
@@ -263,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
