[runner] Pipe stderr to stdout for subprocess to allow traceback to be saved.

--- a/thot_core/runner.ipynb
+++ b/thot_core/runner.ipynb
@@ -17,7 +17,7 @@
     "import sys\n",
     "import json\n",
     "import signal\n",
-    "import platform\n",
+    "# import platform\n",
     "import subprocess\n",
     "from concurrent.futures import ThreadPoolExecutor\n",
     "\n",
@@ -121,7 +121,8 @@
     "            return subprocess.check_output(\n",
     "                f'python { script_path }',\n",
     "                shell = True,\n",
-    "                env = env\n",
+    "                env = env,\n",
+    "                stderr = subprocess.STDOUT\n",
     "            )\n",
     "        \n",
     "        except subprocess.CalledProcessError as err:\n",
@@ -289,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
