[runner] Updated signature for script_error hook. Resolved issue with default script error handler.

--- a/thot_core/runner.ipynb
+++ b/thot_core/runner.ipynb
@@ -31,14 +31,7 @@
    "outputs": [],
    "source": [
     "def escape_path( path ):\n",
-    "    return f'\"{ path }\"'\n",
-    "#     system = platform.system()\n",
-    "    \n",
-    "#     if system == 'Windows':\n",
-    "#         return f'\"{ path }\"'\n",
-    "    \n",
-    "#     else:\n",
-    "#         return path.replace( ' ', '\\ ' )"
+    "    return f'\"{ path }\"'"
    ]
   },
   {
@@ -54,7 +47,6 @@
     "    Hooks are:\n",
     "        + get_container: Method to retrieve the Container being run. \n",
     "            Provided the root id, should return the Container.\n",
-    "            [Siganture: ( root ) => ( Container )]\n",
     "            [Required]\n",
     "            \n",
     "        + get_script_info: Method to retrieve require information about the Script being run.\n",
@@ -62,7 +54,7 @@
     "            [Required]\n",
     "        \n",
     "        + script_error: Runs when a Script creates an error.\n",
-    "            [Signature: ( error, ignore_errors ) => ()]\n",
+    "            [Signature: ( error, script_id, root, ignore_errors ) => ()]\n",
     "            \n",
     "        + assets_added: Run after a Script analysis is complete, passed ids of the added Assets.\n",
     "            [Signature: ( added_assets ) => ()]\n",
@@ -223,7 +215,7 @@
     "                ) \n",
     "\n",
     "            except Exception as err:\n",
-    "                self.hooks[ 'script_error' ]( err, ignore_errors )\n",
+    "                self.hooks[ 'script_error' ]( err, script_id, root, ignore_errors )\n",
     "\n",
     "            if self.hooks[ 'assets_added' ]:\n",
     "                script_assets = [ \n",
@@ -253,7 +245,7 @@
     "    \n",
     "    \n",
     "    @staticmethod\n",
-    "    def _default_script_error_handler( err, ignore_errors = False ):\n",
+    "    def _default_script_error_handler( err, script_id, root, ignore_errors = False ):\n",
     "        \"\"\"\n",
     "        \n",
     "        \"\"\"\n",
@@ -290,7 +282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
