Updated default error handler.

--- a/thot_core/runner.ipynb
+++ b/thot_core/runner.ipynb
@@ -55,6 +55,12 @@
     "        \n",
     "        + script_error: Runs when a Script creates an error.\n",
     "            [Signature: ( error, script_id, root, ignore_errors ) => ()]\n",
+    "            :param err: The raise error. \n",
+    "                err.cmd contains Container and Script info.\n",
+    "                err.output contains the traceback.\n",
+    "            :param script_id: Id of the Script. [Default: None]\n",
+    "            :param root: Container of error. [Default: None]\n",
+    "            :param ignore_errors: Whether to ignore errors. [Default: False]\n",
     "            \n",
     "        + assets_added: Run after a Script analysis is complete, passed ids of the added Assets.\n",
     "            [Signature: ( added_assets ) => ()]\n",
@@ -118,7 +124,7 @@
     "            )\n",
     "        \n",
     "        except subprocess.CalledProcessError as err:\n",
-    "            err.cmd = '[{}] '.format( container_id ) + err.cmd\n",
+    "            err.cmd = f'[{ container_id }] { err.cmd }'\n",
     "            raise err\n",
     "    \n",
     "    \n",
@@ -245,14 +251,25 @@
     "    \n",
     "    \n",
     "    @staticmethod\n",
-    "    def _default_script_error_handler( err, script_id, root, ignore_errors = False ):\n",
+    "    def _default_script_error_handler( \n",
+    "        err, \n",
+    "        script_id = None, \n",
+    "        root = None, \n",
+    "        ignore_errors = False\n",
+    "    ):\n",
     "        \"\"\"\n",
-    "        \n",
+    "        :param err: The raise error. \n",
+    "            err.cmd contains Container and Script info.\n",
+    "            err.output contains the traceback.\n",
+    "        :param script_id: Id of the Script. [Default: None]\n",
+    "        :param root: Container of error. [Default: None]\n",
+    "        :param ignore_errors: Whether to ignore errors. [Default: False]\n",
     "        \"\"\"\n",
     "        if ignore_errors:\n",
     "            # TODO [2]: Only return errors after final exit.\n",
     "            # collect errors for output at end\n",
-    "            print( '[{}] {}'.format( root._id, err ) )\n",
+    "            msg = f'{ err.cmd }\\n{ err.output.decode() }\\n'\n",
+    "            print( msg )\n",
     "\n",
     "        else:\n",
     "            raise err"
