Updated default error handler.

--- a/thot_core/runner.ipynb
+++ b/thot_core/runner.ipynb
@@ -265,13 +265,14 @@
     "        :param root: Container of error. [Default: None]\n",
     "        :param ignore_errors: Whether to ignore errors. [Default: False]\n",
     "        \"\"\"\n",
+    "        msg = f'{ err.cmd }\\n{ err.output.decode() }\\n'\n",
     "        if ignore_errors:\n",
     "            # TODO [2]: Only return errors after final exit.\n",
     "            # collect errors for output at end\n",
-    "            msg = f'{ err.cmd }\\n{ err.output.decode() }\\n'\n",
     "            print( msg )\n",
     "\n",
     "        else:\n",
+    "            err.cmd = msg\n",
     "            raise err"
    ]
   },
