--- a/thot_core/runner.ipynb
+++ b/thot_core/runner.ipynb
@@ -16,10 +16,13 @@
     "import os\n",
     "import sys\n",
     "import json\n",
+    "import queue\n",
     "import signal\n",
-    "# import platform\n",
+    "import asyncio\n",
+    "import logging\n",
     "import subprocess\n",
-    "from concurrent.futures import ThreadPoolExecutor\n",
+    "from time import perf_counter\n",
+    "from concurrent.futures import ThreadPoolExecutor, ProcessPoolExecutor, wait\n",
     "\n",
     "from .classes.container import Container"
    ]
@@ -134,9 +137,10 @@
     "        root, \n",
     "        scripts = None,\n",
     "        ignore_errors = False, \n",
-    "        multithread = False, \n",
-    "        multiprocess = False,\n",
-    "        verbose = False,\n",
+    "        multithread   = False,\n",
+    "        asynchronous  = False,\n",
+    "        multiprocess  = False,\n",
+    "        verbose       = False\n",
     "    ):\n",
     "        \"\"\"\n",
     "        Runs scripts on the Container tree.\n",
@@ -152,11 +156,14 @@
     "            Should be used for IO bound evaluations.\n",
     "            CAUTION: May decrease runtime, but also locks system and can not kill.\n",
     "            [Default: False] [Default Threads: 5]\n",
+    "        :param asynchronous: Evaluate tree asynchronously. [Default: False]\n",
     "        :param multiprocess: Evaluate tree using multiple processes.\n",
     "            Should be used for CPU bound evaluations.\n",
     "            NOT YET IMPLEMENTED\n",
     "            [Default: False]\n",
-    "        :param verbose: Print evaluation information. [Default: False]\n",
+    "        :param verbose: Log evaluation information. [Default: False]\n",
+    "        :raises RuntimeError: If more than one of \n",
+    "            multithread, asynchronous, or multiprocess evaluates to True.\n",
     "        \"\"\"\n",
     "        self._check_hooks()\n",
     "        \n",
@@ -165,6 +172,9 @@
     "            root = Container( **root )\n",
     "\n",
     "        # eval children\n",
+    "        if verbose:\n",
+    "            subtree_start = perf_counter()\n",
+    "            \n",
     "        kwargs = {\n",
     "            'scripts': scripts,\n",
     "            'ignore_errors': ignore_errors,\n",
@@ -172,28 +182,103 @@
     "            'verbose': verbose\n",
     "        }\n",
     "        \n",
-    "        if multithread:\n",
-    "            max_workers = (\n",
-    "                5 # default\n",
-    "                if multithread is True else\n",
-    "                multithread\n",
-    "            )\n",
-    "            \n",
-    "            with ThreadPoolExecutor( max_workers = max_workers ) as executer:\n",
-    "                # only enable threading at top level\n",
-    "                kwargs[ 'multithread' ] = False\n",
+    "        # check eval specifications\n",
+    "        if sum( map( bool, [ multithread, asynchronous, multiprocess ] ) ) > 1:\n",
+    "            raise RuntimeError( 'Invalid evaluation specification. Only one of multithread, asynchronous, or multiprocess can evaluate to True.' )\n",
+    "        \n",
+    "        if asynchronous:\n",
+    "            raise NotImplementedError( 'Asynchronous evaluation is not yet implemented.' )\n",
+    "        \n",
+    "        elif multithread is not False:\n",
+    "            executor_creator = False\n",
+    "            if not isinstance( multithread, ThreadPoolExecutor ):\n",
+    "                def _kill_threads( executor ):\n",
+    "                    print( '\\nWrapping up, please wait...' )\n",
+    "\n",
+    "                    py_version = sys.version_info\n",
+    "                    if ( \n",
+    "                        ( py_version.major < 3 ) or \n",
+    "                        ( ( py_version.major == 3 ) and ( py_version.minor < 9 ) )\n",
+    "                    ):\n",
+    "                        # py versions less than 3.9\n",
+    "                        # Executor#shutdown does not accept\n",
+    "                        # cancel_futures keyword\n",
+    "                        # manually shutdown\n",
+    "                        \n",
+    "                        executor.shutdown( wait = False )\n",
+    "                        while True:\n",
+    "                            try:\n",
+    "                                work_item = executor._work_queue.get_nowait()\n",
+    "                                \n",
+    "                            except queue.Empty:\n",
+    "                                break\n",
+    "                                \n",
+    "                            if work_item is not None:\n",
+    "                                work_item.future.cancel()\n",
+    "\n",
+    "                    else:\n",
+    "                        executor.shutdown( cancel_futures = True )\n",
+    "                    \n",
+    "                    sys.exit( 0 )\n",
     "                \n",
-    "                executer.map( \n",
-    "                    lambda child: self.eval_tree( child, **kwargs ), \n",
-    "                    root.children \n",
+    "                # create thread pool if needed\n",
+    "                max_workers = (\n",
+    "                    5 # default\n",
+    "                    if multithread is True else\n",
+    "                    multithread\n",
     "                )\n",
     "\n",
+    "                multithread = ThreadPoolExecutor( max_workers = max_workers )\n",
+    "                kwargs[ 'multithread' ] = multithread\n",
+    "                executor_creator = True\n",
+    "                \n",
+    "                signal.signal( \n",
+    "                    signal.SIGINT, \n",
+    "                    lambda sig, frame: _kill_threads( multithread ) \n",
+    "                )\n",
+    "            \n",
+    "            # can not use executor#map because child ownership seems to get messed up\n",
+    "            futures = list( map(\n",
+    "                lambda child: multithread.submit( self.eval_tree, child, **kwargs ),\n",
+    "                root.children\n",
+    "            ) )\n",
+    "\n",
+    "            ( done, not_done ) = wait( futures )\n",
+    "\n",
+    "\n",
+    "            if executor_creator:\n",
+    "                multithread.shutdown()\n",
+    "                \n",
+    "        elif multiprocess is not False:\n",
+    "            raise NotImplementedError( 'Multiprocess evaluation is not yet implemented.' )\n",
+    "            \n",
+    "            executor_creator = False\n",
+    "            if not isinstance( multiprocess, ProcessPoolExecutor ):\n",
+    "                # create thread pool if needed\n",
+    "                max_workers = (\n",
+    "                    5 # default\n",
+    "                    if multiprocess is True else\n",
+    "                    multiprocess\n",
+    "                )\n",
+    "\n",
+    "                multiprocess = ProcessPoolExecutor( max_workers = max_workers )\n",
+    "                kwargs[ 'multiprocess' ] = multiprocess\n",
+    "                executor_creator = True\n",
+    "                \n",
+    "            multiprocess.map( \n",
+    "                lambda child: self.eval_tree( child, **kwargs ), \n",
+    "                root.children \n",
+    "            )\n",
+    "\n",
+    "            if executor_creator:\n",
+    "                multiprocess.shutdown()      \n",
+    "        \n",
     "        else:\n",
     "            for child in root.children:\n",
     "                # recurse\n",
     "                self.eval_tree( child, **kwargs )\n",
-    "\n",
-    "        # TODO [1]: Check filtering works for local projects.\n",
+    "                \n",
+    "        # TODO [1]: Check filtering works.\n",
     "        # filter scripts to run\n",
     "        root.scripts.sort()\n",
     "        run_scripts = (\n",
@@ -203,6 +288,8 @@
     "        )\n",
     "\n",
     "        # eval self\n",
+    "        # TODO [0]: Group scripts by priority.\n",
+    "        #     Run scripts within each group asynchronously, or with multiprocessing.\n",
     "        added_assets = []\n",
     "        for association in run_scripts:\n",
     "            if not association.autorun:\n",
@@ -211,14 +298,21 @@
     "            ( script_id, script_path ) = self.hooks[ 'get_script_info' ]( association.script )\n",
     "\n",
     "            if verbose:\n",
-    "                print( 'Running script {} on container {}'.format( script_id, root._id )  )\n",
+    "                logging.info( 'Running script {} on container {}'.format( script_id, root._id )  )\n",
     "\n",
     "            try:\n",
+    "                if verbose:\n",
+    "                    eval_start = perf_counter()\n",
+    "        \n",
     "                script_assets = self.run_script( \n",
     "                    str( script_id ), # convert ids if necessary\n",
     "                    script_path, \n",
     "                    str( root._id ) \n",
     "                ) \n",
+    "            \n",
+    "                if verbose:\n",
+    "                    logging.info( f'[Container { root._id } | Script { script_id } ] { perf_counter() - eval_start } s' )\n",
+    "       \n",
     "\n",
     "            except Exception as err:\n",
     "                self.hooks[ 'script_error' ]( err, script_id, root, ignore_errors )\n",
@@ -232,9 +326,11 @@
     "\n",
     "                self.hooks[ 'assets_added' ]( script_assets )\n",
     "\n",
-    "\n",
     "        if self.hooks[ 'complete' ]:\n",
     "            self.hooks[ 'complete' ]()\n",
+    "            \n",
+    "        if verbose:\n",
+    "            logging.info( f'[Container { root._id }] { perf_counter() - subtree_start } s' )\n",
     "            \n",
     "            \n",
     "    def _check_hooks( self ):\n",
