[runner] Added tasks parameter to limit concurrency.

--- a/thot_core/runners/runner_async.ipynb
+++ b/thot_core/runners/runner_async.ipynb
@@ -87,6 +87,7 @@
     "        }\n",
     "        \n",
     "        self._procs = {}\n",
+    "        self._semaphore = None\n",
     "        self._exit_task = None\n",
     "        \n",
     "    \n",
@@ -105,10 +106,34 @@
     "        self.hooks[ hook ] = method\n",
     "    \n",
     "    \n",
+    "    @property\n",
+    "    def semaphore( self ):\n",
+    "        \"\"\"\n",
+    "        :returns: Semaphore.\n",
+    "        \"\"\"\n",
+    "        return self._semaphore\n",
+    "    \n",
+    "    \n",
+    "    def set_semaphore( self, value ):\n",
+    "        \"\"\"\n",
+    "        Sets the semaphore to use.\n",
+    "            \n",
+    "        :param value: Semaphore's value.\n",
+    "        :raises RuntimeError: If semaphore is already set.\n",
+    "        :raises TypeError: If semaphore is invalid.\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        if self._semaphore is not None:\n",
+    "            raise RuntimeError( 'Semaphore already set.' )\n",
+    "        \n",
+    "        self._semaphore = asyncio.Semaphore( value )\n",
+    "\n",
+    "    \n",
     "    # TODO [2]: Allow running between certain depths.\n",
     "    async def eval_tree( \n",
     "        self,\n",
-    "        root, \n",
+    "        root,\n",
+    "        tasks = None,\n",
     "        **eval_args\n",
     "    ):\n",
     "        \"\"\"\n",
@@ -116,19 +141,47 @@
     "        Uses DFS, running from bottom up.\n",
     "\n",
     "        :param root: Container or id.\n",
+    "        :param tasks: Maximum number of tasks.\n",
+    "            If None, no limit. [Default: None]\n",
     "        :param **eval_args: Arguments passed to #eval_container.\n",
     "        :raises RuntimeError: If more than one of \n",
     "            multithread, asynchronous, or multiprocess evaluates to True.\n",
     "        \"\"\"\n",
+    "        # signal handlers\n",
     "        self._check_hooks()\n",
     "        if threading.current_thread() is threading.main_thread():\n",
     "            self._register_signal_handlers()\n",
-    "        \n",
+    "            \n",
+    "        # verbose\n",
     "        verbose = self.get_kwarg( 'verbose', eval_args, False )\n",
     "        if verbose:\n",
     "            logger = logging.getLogger( __name__ )\n",
     "            subtree_start = perf_counter()\n",
+    "            \n",
+    "        # tasks\n",
+    "        # task validity\n",
+    "        if (\n",
+    "            isinstance( tasks, bool ) or\n",
+    "            not (\n",
+    "                ( tasks is None ) or\n",
+    "                isinstance( tasks, int )\n",
+    "            )\n",
+    "        ):\n",
+    "            raise TypeError( 'Parameter tasks must be None or an integer.' )\n",
+    "            \n",
+    "        if ( \n",
+    "            isinstance( tasks, int ) and\n",
+    "            tasks < 1 \n",
+    "        ):\n",
+    "            raise ValueError( 'Must allow at least one task, provided in tasks parameter.' )\n",
     "        \n",
+    "        semaphore_creator = False\n",
+    "        if ( tasks is not None ) and ( self.semaphore is None ):\n",
+    "            # create semaphore\n",
+    "            self.set_semaphore( tasks )\n",
+    "            semaphore_creator = True\n",
+    "        \n",
+    "        # get root\n",
     "        root = self.hooks[ 'get_container' ]( root )\n",
     "        if not isinstance( root, Container ):\n",
     "            root = Container( **root )\n",
@@ -136,10 +189,13 @@
     "        # evaluate children\n",
     "        children = []\n",
     "        for child in root.children:\n",
-    "            children.append( self.eval_tree( \n",
+    "            child_task = self.eval_tree( \n",
     "                child,\n",
+    "                tasks = tasks,\n",
     "                **eval_args\n",
-    "            ) )\n",
+    "            )\n",
+    "            \n",
+    "            children.append( child_task )\n",
     "        \n",
     "        try:\n",
     "            await asyncio.gather( *children )\n",
@@ -153,6 +209,10 @@
     "        if self.hooks[ 'complete' ]:\n",
     "            self.hooks[ 'complete' ]()\n",
     "            \n",
+    "        if semaphore_creator:\n",
+    "            # destroy semaphore\n",
+    "            self._semaphore = None\n",
+    "            \n",
     "        if verbose:\n",
     "            logger.info( f'[Container { root._id }] { perf_counter() - subtree_start } s' )\n",
     "    \n",
@@ -160,6 +220,7 @@
     "    def eval_tree_sync(\n",
     "        self,\n",
     "        root,\n",
+    "        tasks = None,\n",
     "        **eval_args\n",
     "    ):\n",
     "        \"\"\"\n",
@@ -169,7 +230,7 @@
     "        \n",
     "        See #eval_tree for description.\n",
     "        \"\"\"\n",
-    "        asyncio.run( self.eval_tree( root, **eval_args ) )\n",
+    "        asyncio.run( self.eval_tree( root, tasks = tasks, **eval_args ) )\n",
     "            \n",
     "            \n",
     "    async def eval_container( \n",
@@ -238,37 +299,47 @@
     "            \n",
     "            :param association: ScriptAssociation to run.\n",
     "            \"\"\"\n",
+    "            async def _execute_script( script_id, script_path ):\n",
+    "                if verbose:\n",
+    "                    logger.info( f'Running script {script_id} on container {container._id}' )\n",
+    "                    eval_start = perf_counter()\n",
+    "        \n",
+    "                try:\n",
+    "                    script_assets = await self.run_script( \n",
+    "                        str( script_id ), # convert ids if necessary\n",
+    "                        script_path,\n",
+    "                        str( container._id )\n",
+    "                    ) \n",
+    "\n",
+    "                except subprocess.CalledProcessError as err:\n",
+    "                    # check for keyboard interupt\n",
+    "                    sigint_pattern = 'died with <Signals.SIGINT: 2>'\n",
+    "                    if sigint_pattern in str( err ):\n",
+    "                        raise asyncio.CancelledError\n",
+    "\n",
+    "                    # other error\n",
+    "                    self.hooks[ 'script_error' ]( err, script_id, container, ignore_errors )\n",
+    "\n",
+    "                except asyncio.CancelledError as err:\n",
+    "                    raise err\n",
+    "                    \n",
+    "                if verbose:\n",
+    "                    logger.info( \n",
+    "                        f'[Container { container._id } | Script { script_id }] { perf_counter() - eval_start } s' \n",
+    "                    )\n",
+    "            \n",
+    "                return script_assets\n",
+    "            \n",
+    "            \n",
     "            ( script_id, script_path ) = self.hooks[ 'get_script_info' ]( association.script )\n",
     "\n",
-    "            if verbose:\n",
-    "                logger.info( f'Running script {script_id} on container {container._id}' )\n",
-    "\n",
-    "            if verbose:\n",
-    "                eval_start = perf_counter()\n",
-    "        \n",
-    "            try:\n",
-    "                script_assets = await self.run_script( \n",
-    "                    str( script_id ), # convert ids if necessary\n",
-    "                    script_path,\n",
-    "                    str( container._id )\n",
-    "                ) \n",
-    "            \n",
-    "            except subprocess.CalledProcessError as err:\n",
-    "                # check for keyboard interupt\n",
-    "                sigint_pattern = 'died with <Signals.SIGINT: 2>'\n",
-    "                if sigint_pattern in str( err ):\n",
-    "                    raise asyncio.CancelledError\n",
+    "            # execute script\n",
+    "            if self.semaphore is None:\n",
+    "                script_assets = await _execute_script( script_id, script_path )\n",
     "                \n",
-    "                # other error\n",
-    "                self.hooks[ 'script_error' ]( err, script_id, container, ignore_errors )\n",
-    "                \n",
-    "            except asyncio.CancelledError as err:\n",
-    "                raise err\n",
-    "            \n",
-    "            if verbose:\n",
-    "                logger.info( \n",
-    "                    f'[Container { container._id } | Script { script_id }] { perf_counter() - eval_start } s' \n",
-    "                )\n",
+    "            else:\n",
+    "                async with self.semaphore:\n",
+    "                    script_assets = await _execute_script( script_id, script_path )\n",
     "            \n",
     "            if self.hooks[ 'assets_added' ]:\n",
     "                script_assets = [ \n",
@@ -436,7 +507,7 @@
     "                sig,\n",
     "                partial( _exit, sig, loop )\n",
     "            )\n",
-    "    \n",
+    "            \n",
     "    \n",
     "    @staticmethod\n",
     "    def group_scripts( associations ):\n",
